# dynamic-loader

./: CMakeLists.txt
example/: loadable.cpp  process.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pipe.cpp  pipe.h  serialization.h
src/forwarder/: coms.cpp  coms.h  forwarder.cpp  loader_interface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/forwarder/ui/: icon_helpers.h  load_event.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  unload_event.h
src/ipc/: pipe.h
src/loader/: loader.cpp
src/portforwarder/: coms.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  portforwarder.cpp  process_selector.ui  processselector.cpp  processselector.h
src/portinjector/: portinjector.cpp
